2005-05-26  Lute Kamstra  <lute@gnu.org>

	* arc-mode.el (archive-mode):
	* bookmark.el (bookmark-read-annotation-mode)
	(bookmark-edit-annotation-mode, bookmark-bmenu-mode):
	* bs.el (bs-mode):
	* calc/calc-yank.el (calc-edit-mode):
	* calc/calc.el (calc-mode, calc-trail-mode):
	* calculator.el (calculator-mode):
	* chistory.el (command-history-mode):
	* comint.el:
	* cus-edit.el (custom-mode):
	* descr-text.el (describe-text-mode):
	* ebuff-menu.el (Electric-buffer-menu-mode):
	* ediff-util.el (ediff-mode):
	* forms.el (forms-mode):
	* help-mode.el (help-mode):
	* hexl.el (hexl-mode):
	* ibuffer.el (ibuffer-mode):
	* ielm.el (inferior-emacs-lisp-mode):
	* info.el (Info-mode, Info-edit-mode):
	* ledit.el (ledit-from-lisp-mode):
	* locate.el (locate-mode):
	* replace.el (occur-mode):
	* ses.el (ses-mode):
	* simple.el (completion-list-mode):
	* skeleton.el:
	* speedbar.el (speedbar-mode):
	* term.el:
	(term-mode):
	* terminal.el (terminal-edit-mode):
	* wdired.el (wdired-change-to-wdired-mode):
	* wid-browse.el (widget-browse-mode): Use run-mode-hooks.

	* array.el (array-mode):
	* man.el (Man-mode): Use kill-all-local-variables and
	run-mode-hooks.

	* subr.el (delay-mode-hooks): Specify indentation.

2005-05-26  Jay Belanger  <belanger@truman.edu>

	* calc/calc-prog.el (calc-user-define-edit): Don't find substring
	of nil.

2005-05-27  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frame-address):
	Rename from gdb-current-address.
	(gdb-previous-frame-address): Rename from gdb-previous-address.
	(gdb-selected-frame): Rename from gdb-current-frame.
	(gdb-get-selected-frame): Rename from gdb-get-current-frame.
	(gdb-frame-number): Rename from gdb-current-stack-level.
	(gdb-ann3): Match new mode-name for disassembly buffer.
	Extend initialisation of variables.
	(gdb-post-prompt): Update disassembly from gdb-frame-handler.
	(gdb-memory-mode): Use mouse-face in header line.
	(gdb-assembler-buffer-name): Call it disassembly and give frame